<?xml version="1.0" encoding="UTF-8"?>
<resources>

   
    <string name="app_name">e代驾</string>
    <string name="find_driver">寻找代驾</string>
    <string name="my_account">我的账户</string>
    <string name="review">我的代驾</string>
    <string name="price">价格表</string>
    <string name="username">手机号 : </string>
    <string name="password">   密码 : </string>
	<string name="bt_map">地图</string>
	<string name="bt_cont">列表</string>
	<string name="tittle_find">寻找代驾</string>
	<string name="review_driver">司机:</string>
	<string name="review_level">评价等级:</string>
	<string name="review_r">评</string>
	<string name="review_kh">客户:</string>
	<string name="httpError1">服务器未响应 ！</string>
	<string name="httpconnect">网络连接有问题 ，确认已打开网络?</string>
	<string name="title">e代驾服务价格表</string>
	<string name="nb_name">姓名:</string>
	<string name="nb_year">驾龄:</string>
	<string name="nb_count">代驾:</string>
	<string name="nb_domicile">籍贯:</string>
	<string name="nb_jiazhao">驾照:</string>
	<string name="nb_criticals">短信评价</string>
	<string name="hasnoreview">暂无评价</string>
	<string name="common_back">返回</string>
	<string name="map_string">正在加载数据 ，请稍候...</string>
	<string name="back_title">司机详情</string>
	<string name="recommend">推荐好友</string>
	<string name="about">关于e代驾</string>
	<string name="common_submit">发送</string>
	<string name="share_weibo">分享至新浪微博</string>
	<string name="share_email">通过邮件推荐</string>
	<string name="share_email_choice">选择 邮件</string>
	<string name="share_sms">通过短信推荐</string>
	<string name="sina_weibo">e代驾还真是一个非常好的服务,方便快捷,关键是正规安全,还经济实惠,非常放心,值得一试!下载地址:http://edaijia.cn</string>
	<string name="error_title">抱歉，暂时无法获得您的位置，请点击下方电话，继续享受e代驾提供的服务。</string>
	<string name="error_note">温馨提示：e代驾现只开通了北京、上海、广州、杭州、深圳五个城市的服务，其他城市会陆续开通，尽请期待！</string>
	<string name="current_city">当前选择城市</string>
	<string name="city_list">开通城市</string>
	<string name="city_choice">选择城市</string>
	<string name="click_agine_eixt">再按一次退出程序</string>
	<string name="cityname">北京</string>
	<string name="distance">距离:</string>
	<string name="hasnoMydriver">没有代驾记录</string>
	<string name="order_time">预约时间:</string>
	<string name="favorable">优惠券</string>
	<string name="cashnum">请输入优惠券号码</string>
	<string name="phonenum">请输入您的手机号</string>
	<string name="common_cancle">取消</string>
	<string name="call">拨打电话</string>
	<string name="weibo_authorization">微博 授权 : </string>
	<string name="weibo_auth_ancle">授权 取消</string>
	<string name="weibo_submit_fail_same">您刚刚分享了这个微博, 请稍候再分享.</string>
	<string name="weibo_submit_fail">分享不成功,请稍候再试.</string>
	<string name="weibo_submit_success">微博分享成功, e代驾感谢您的分享.</string>
	<string name="weibo_tips">分享提示</string>
	<string name="sending">发送中, 请稍候...</string>
	<string name="commom_affirm">确认</string>
	<string name="free">空闲</string>
	<string name="working">服务中</string>
	<string name="good_reputation">好评</string>
	<string name="medium_review">中评</string>
	<string name="bad_review">差评</string>
	<string name="hotline">客服热线:</string>
	<string name="phone_400">4006–91-3939</string>
	<string name="feedback">意见反馈</string>
	<string name="feedback_email">info@edaijia.cn</string>
	<string name="about_risks">关于代驾险</string>
	<string name="risks_details">代驾险详情</string>
	<string name="time_out">连接超时，请稍后重试</string>
	<string name="connect_or_position">获取位置信息失败,请重试</string>
	<string name="no_drivers">您附近暂时没有代驾司机，请稍后再试</string>
	<string name="connect_out">无连接,请尝试打开GPS或检测您的网络状态后再次连接</string>
	<string name="driver_phone">司机电话:</string>
	<string name="phones">预约多名司机: 4006–91-3939</string>
	<string name="shared_email_subject">史上唯一能救命的APP</string>
</resources>