<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"   
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"   
        android:background="@drawable/navigationbar_background"     
        android:orientation="horizontal" >

        <Button
            android:id="@+id/comm_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/back"
            android:gravity="center"
            android:text="@string/common_back"
            android:textColor="@color/whit" />

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/title_tv"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:text="@string/back_title"
            android:textColor="@color/whit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/comm_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/submint"
            android:gravity="center"
            android:text="@string/common_submit"
            android:textColor="@color/whit"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>