<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/Gray"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_back" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

        <!-- 头像 -->

        <LinearLayout
            android:layout_width="74dp"
            android:layout_height="85dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/search_cell_avatar_shadow"
            android:gravity="center" >

            <ImageView
                android:id="@+id/nearby_image"
                android:layout_width="74dp"
                android:layout_height="85dp"
                android:contentDescription="TODO"
                android:src="@drawable/default_driver" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- 姓名 -->

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nb_name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/nearby_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>
                <!-- 状态 -->

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/nearby_state"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="空闲中"
                        android:textColor="@color/yellow"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <!-- 评分等级 -->

                    <RatingBar
                        android:id="@+id/nearby_star"
                        style="@style/roomRatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:isIndicator="true"
                        android:numStars="5" />
                </LinearLayout>
            </LinearLayout>
            <!-- 驾驶证 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nb_jiazhao"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/ny_idCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <!-- 代驾次数 -->

                    <LinearLayout
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nb_count"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/ny_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />
                    </LinearLayout>
                    <!-- 驾龄 -->

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nb_year"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/nearby_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />
                    </LinearLayout>
                    <!-- 籍贯 -->

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nb_domicile"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/ny_domicile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <!-- button -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal" >

        <ImageButton
            android:id="@+id/image_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_call_drivers" />
    </LinearLayout>
    <!-- 查看评论 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/comment_backgroundbar"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nb_criticals"
            android:textColor="@color/whit"
            android:textSize="18sp" />
    </LinearLayout>
    <!-- listView -->
    <!-- 进度条 -->

    <LinearLayout
        android:id="@+id/linear_progress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/Gray"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/refresh_view_progress"
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>
    <!-- 暂无评论 -->

    <LinearLayout
        android:id="@+id/linear_review"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/hasnoreview"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <cn.edaijia.android.client.util.MyListView
        android:id="@+id/driver_listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:cacheColorHint="@color/Gray"
        android:divider="@drawable/listview_line" />

</LinearLayout>