<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:paddingTop="2dp"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp">

    <ImageView
        android:id="@+id/my_image"
        android:layout_width="74dp"
        android:layout_height="90dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/search_cell_avatar_shadow"
        android:src="@drawable/default_driver" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- 姓名 -->

            <LinearLayout
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nb_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/my_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- 状态 -->

            <TextView
                android:id="@+id/my_state"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="空闲中"
                android:textColor="@color/yellow"
                android:textSize="18sp"
                android:visibility="gone" />

            <!-- 评分等级 -->

            <RatingBar
                android:id="@+id/my_star"
                style="@style/roomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:isIndicator="true"
                android:numStars="5" />
        </LinearLayout>

        <!-- 驾驶证 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_time"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/my_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- 按钮 -->
        <Button
            android:id="@+id/my_image_available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/call"
            android:textSize="20dp"
            android:textColor="@color/whit"
            android:background="@drawable/btn_my_history_call_driver" />
    </LinearLayout>

</LinearLayout>